--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.1",
+    "formBuilder": "^3.8.3",
+    "jquery": "^3.6.3",
+    "jquery-ui-sortable": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
