--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.1",
     "dayjs": "^1.11.7",
+    "form-render": "^2.0.10",
     "formBuilder": "^3.8.3",
     "jquery": "^3.6.3",
     "jquery-ui-sortable": "^1.0.0",
