--- a/backend/project/src/main/resources/application.properties
+++ b/backend/project/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.data.mongodb.uri=mongodb+srv://IS442OOP:IS442OOP@cluster0.nnayelz.mongodb.net/mygrocerylist
 spring.data.mongodb.database=mygrocerylist
+
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=oopis442team7@outlook.com
+spring.mail.password=team7is442oop
+
+spring.mail.properties.mail.smtp.starttls.enable=true
