--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,15 @@
     "form-render": "^2.0.11",
     "formBuilder": "^3.8.3",
     "jquery": "^3.6.3",
+    "jquery-ui": "^1.13.2",
     "jquery-ui-sortable": "^1.0.0",
     "moment-jalaali": "^0.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.0.6",
+    "signature_pad": "^4.1.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
