--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "antd": "^5.2.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "edit": "^1.0.2",
+    "font": "^0.0.4",
     "form-render": "^2.0.11",
     "formBuilder": "^3.8.3",
     "jquery": "^3.6.3",
