--- a/backend/project/pom.xml
+++ b/backend/project/pom.xml
@@ -56,6 +56,11 @@
 			<version>3.1.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 	</dependencies>
 
 	<build>
