--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^5.11.9",
     "@mui/styles": "^5.11.13",
     "@mui/x-date-pickers": "^5.0.20",
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,10 +31,11 @@
     "moment-jalaali": "^0.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^6.2.2",
     "react-pro-sidebar": "^1.0.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-signature-canvas": "^1.0.6",
     "signature_pad": "^4.1.5",
